@@ -11,6 +11,7 @@ Imortant changes:
 Features:
 - new "websearch" command which default to wiby.me
 - new "share" command to send a page by email
+- http cookies are now supported in netcache (by Urja)
 Others:
 - In "lists", only consider files ending with .gmi (bug #46 by woffs)
 - support for new links color in gopher (by JMCS)
